# react-native-textflow

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TEST_GUIDE.md  TextFlow.podspec  eslint.config.mjs  jest.config.js  package.json  react-native.config.js  tsconfig.json
.cursor/plans/: react-native-adaptive-text-v1_1f054a65.plan.md  test_scaffold_v1_4690e965.plan.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
.maestro/: 00-launch.yaml  01-resizable.yaml  04-scrollview-preset-toggle.yaml  07-stylemorph-fontsize.yaml  11-theme-toggle.yaml  config.yaml
__fixtures__/: tokenizer.json
android/: build.gradle
android/src/androidTest/: AndroidManifest.xml
android/src/androidTest/java/com/adaptivetext/: AdaptiveTextViewHeightTest.kt
android/src/main/java/com/adaptivetext/: AdaptiveTextPackage.kt  AdaptiveTextView.kt  AdaptiveTextViewManager.kt
android/src/main/java/com/adaptivetext/compose/: AdaptiveFlowLayout.kt  AdaptiveTextFlow.kt  AdaptiveTextRenderProps.kt  AdaptiveTextTokenizer.kt
android/src/main/java/com/adaptivetext/measurer/: AdaptiveTextNativeMeasurer.kt
android/src/main/jni/: AdaptiveTextMeasurer.cpp  AdaptiveTextViewSpec.h  CMakeLists.txt
android/src/test/java/com/adaptivetext/compose/: AdaptiveTextTokenizerTest.kt
android/src/test/java/com/adaptivetext/measurer/: AdaptiveTextNativeMeasurerCacheKeyTest.kt
common/cpp/react/renderer/components/AdaptiveTextViewSpec/: AdaptiveTextComponentDescriptor.h  AdaptiveTextMeasurer.h  AdaptiveTextShadowNode.h
example/: .gitignore  app.json  package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/adaptivetext/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/AdaptiveTextExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/AdaptiveTextExample.xcodeproj/: project.pbxproj
example/ios/AdaptiveTextExample.xcodeproj/xcshareddata/xcschemes/: AdaptiveTextExample.xcscheme  AdaptiveTextExampleTests.xcscheme
example/ios/AdaptiveTextExample.xcworkspace/: contents.xcworkspacedata
example/ios/AdaptiveTextExampleTests/: AdaptiveTextMeasurerTests.mm  AdaptiveTextTokenizerTests.swift
example/ios/scripts/: add_test_target.rb
example/src/: App.tsx
example/src/components/: Frame.tsx  Pill.tsx  Slider.tsx  Stage.tsx
example/src/screens/: 01-ResizableContainer.tsx  02-AnimatedWidth.tsx  03-Modal.tsx  04-ScrollView.tsx  05-FlatList.tsx  06-DynamicContent.tsx  07-StyleMorph.tsx  08-RTL.tsx  09-AnimationConfig.tsx  10-Showcase.tsx  11-Theme.tsx  HomeScreen.tsx  index.ts
ios/: AdaptiveTextContent.swift  AdaptiveTextFlowLayout.swift  AdaptiveTextHostingView.swift  AdaptiveTextMeasurer.mm  AdaptiveTextProps.swift  AdaptiveTextTokenizer.swift  AdaptiveTextView.h  AdaptiveTextView.mm
src/: AdaptiveText.tsx  AdaptiveTextNativeComponent.ts  index.tsx  types.ts
src/__tests__/: AdaptiveText.test.tsx
